--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,12 @@ services:
     volumes:
       - .:/usr/app/
     tty: true
+  nginx:
+    depends_on:
+      - https
+    tty: true
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - "8010:80"
+      - 80:80
