--- a/nginx.conf
+++ b/nginx.conf
@@ -4,21 +4,17 @@ events {
   worker_connections 1000;
 }
 
-http {
-upstream https {
-    server slaughter.ml;
-  }
-
+http{
   server {
     listen 80;
+    server_name slaughter.ml;
     location / {
-      proxy_pass http://https:80;
+      proxy_pass http://https;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
-      add_header Access-Control-Allow-Origin *;
     }
   }
 }
