--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   https:
     working_dir: /usr/app/
     image: node:latest
-    command: npm run start
+    command: bash -c "npm i && npm run start"
     volumes:
       - .:/usr/app/
     tty: true
